Fixed Chrome/Safari popup bug: mouse over view item popup was not showing because of continously triggered mousemove events Introduced ViewInteraction.Type to allow for synthetic event types, e.g. DRAG_START Removal of popup highlighting when drag operation finishes Changed cursor over text item to 'default'
ACCEPTED - task 135: Separate drag and drop functionality from core module 
http://code.google.com/p/choosel/issues/detail?id=135

--- a/org.thechiselgroup.choosel.core/src/org/thechiselgroup/choosel/core/public/css/choosel.css
+++ b/org.thechiselgroup.choosel.core/src/org/thechiselgroup/choosel/core/public/css/choosel.css
@@ -251,6 +251,7 @@ button.popup-content-action:active {
     padding: 2px;
     border: 0px;
     margin: 2px;
+    cursor: default;
 }
 
 .textItemSelected {
